Fix z-index

--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -21,7 +21,7 @@
     height:100px;
 }
 .card-title {
-  z-index:999;
+  z-index:9;
 }
 
 .card-label{
